chore(predicate): add predicate method